# database-assistant-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  database.db  main.py  pyproject.toml  seed.sql
