[project]
name = "database-assistant-mcp"
version = "0.1.0"
description = "MCP server exposing safe, read-only database tools for AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "sqlglot>=26.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_assistant"]

[project.scripts]
db-assistant = "db_assistant.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
